--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
-        "symfony/yaml": "*"
+        "symfony/yaml": "*",
+      "ext-http": "*"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
